--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: 安野たかひろ：政策リポジトリ
+site_name: 北村たかゆき：政策リポジトリ
 theme:
   name: material
   custom_dir: overrides
@@ -6,13 +6,12 @@ theme:
 nav:
   - Home: 'index.md'
   - 'マニフェスト':
-    - '1. 経済': 'manifest/economy.md'
-    - '2. 防災・医療': 'manifest/care.md'
-    - '3. 教育・子育て': 'manifest/education.md'
-    - '4. 行政': 'manifest/administration.md'
-    - '5. 民主主義': 'manifest/democracy.md'
-    - '6. 予算・財源': 'manifest/budget.md'
-    - '7. その他': 'manifest/others.md'
+    - '1. 若者に選ばれるまち/多様性あふれるまち': 'manifest/diversity.md'
+    - '2. 公民連携による教育/子どもを育てたいまちへ': 'manifest/education.md'
+    - '3. 関市を支える経済の発展': 'manifest/educeconomy.md'
+    - '4. 将来も住み続けたい福祉医療防災の充実': 'manifest/care.md'
+    - '5. 新規参入とIT技術を活用したバスの利便性向上': 'manifest/traffic.md'
+    - '6. その他': 'manifest/others.md'
   - '貢献したいあなたへ': 'contribution.md'
   - 'Issueマニュアル': 'manual_issue.md'
   - 'Pull Requestマニュアル': 'manual_pull_request.md'
