--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,7 +8,7 @@ nav:
   - 'マニフェスト':
     - '1. 若者に選ばれるまち/多様性あふれるまち': 'manifest/diversity.md'
     - '2. 公民連携による教育/子どもを育てたいまちへ': 'manifest/education.md'
-    - '3. 関市を支える経済の発展': 'manifest/educeconomy.md'
+    - '3. 関市を支える経済の発展': 'manifest/economy.md'
     - '4. 将来も住み続けたい福祉医療防災の充実': 'manifest/care.md'
     - '5. 新規参入とIT技術を活用したバスの利便性向上': 'manifest/traffic.md'
     - '6. その他': 'manifest/others.md'
