--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,8 @@ theme:
   name: material
   custom_dir: overrides
   language: ja
+  palette:
+    primary: pink
 nav:
   - Home: 'index.md'
   - 'マニフェスト':
