--- a/.github/ISSUE_TEMPLATE/mamifest_issue_template.yaml
+++ b/.github/ISSUE_TEMPLATE/mamifest_issue_template.yaml
@@ -7,11 +7,11 @@ body:
       description: 該当する政策カテゴリを一つ選んでください
       multiple: true
       options:
-        - 経済
-        - 医療・防災
-        - 教育・子育て
-        - 行政
-        - 民主主義
+        - 若者に選ばれるまち/多様性あふれるまち
+        - 公民連携による教育/子どもを育てたいまちへ
+        - 関市を支える経済の発展
+        - 将来も住み続けたい福祉医療防災の充実
+        - 新規参入とIT技術を活用したバスの利便性向上
         - その他
     validations:
       required: true
