--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,6 @@ nav:
   - '議会から見る関市の数字': 'manifest/numbers.md'
   - '関市議会での活動': 'manifest/parliament.md'
   - '貢献したいあなたへ': 'contribution.md'
-  - '北村たかゆき50の質問': 'qa.md'
+  - '北村たかゆきへの質問': 'qa.md'
   - 'Issueマニュアル': 'manual_issue.md'
   - 'Pull Requestマニュアル': 'manual_pull_request.md'
