関市の数字と関市の概要へ変更

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,7 @@ nav:
     - '4. 将来も住み続けたい福祉医療防災の充実': 'manifest/care.md'
     - '5. 新規参入とIT技術を活用したバスの利便性向上': 'manifest/traffic.md'
     - '6. その他': 'manifest/others.md'
-  - '議会から見る関市の数字': 'manifest/numbers.md'
+  - '関市の数字と関市の概要': 'manifest/numbers.md'
   - '関市議会での活動': 'manifest/parliament.md'
   - '貢献したいあなたへ': 'contribution.md'
   - '北村たかゆきへの質問': 'qa.md'
